# cookiecutter-cpp

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .clang-format  .gitignore  CMakeLists.txt  conan_install.sh  conanfile.txt
{{ cookiecutter.repo_name }}/test/: test_example.cpp
